@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-05-02T16:06:48Z",
-  "count_outdated" : 7,
-  "uniques_outdated" : 3,
-  "count" : 10,
-  "uniques" : 5,
+  "timestamp" : "2022-05-07T16:05:01Z",
+  "count_outdated" : 10,
+  "uniques_outdated" : 5,
+  "count" : 11,
+  "uniques" : 6,
   "views" : [
     {
-      "timestamp": "2022-04-20T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
