@@ -1,11 +1,11 @@
 {
-  "count": 3,
-  "uniques": 2,
+  "count": 1,
+  "uniques": 1,
   "views": [
     {
-      "timestamp": "2022-04-20T00:00:00Z",
-      "count": 3,
-      "uniques": 2
+      "timestamp": "2022-05-07T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
